--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-web3",
-  "version": "0.4.5",
+  "name": "react-aionweb3",
+  "version": "1.0.0",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
@@ -15,9 +15,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/coopermaruyama/react-web3"
+    "url": "https://github.com/coopermaruyama/react-aionweb3"
   },
-  "author": "Cooper Maruyama <me@cooperm.com>",
+  "author": "Jonathan Mota",
   "license": "ISC",
   "dependencies": {
     "lodash": "^4.17.4"
