--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-aionweb3",
-  "version": "1.0.7,
+  "version": "1.0.7",
   "description": "",
   "main": "./dist/index.js",
   "scripts": {
